# warehouse-electronics

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  compile_commands.json  warehouse.db
build-linux/: .ninja_deps  .ninja_log  CMakeCache.txt  Makefile  build.ninja  cmake_install.cmake  compile_commands.json  warehouse.db  warehouse_app
build-linux/.cmake/api/v1/reply/: cmakeFiles-v1-36033c06d3ceba5ed370.json  codemodel-v2-9b21d2ab65a5bc94ea86.json  index-2026-03-24T09-04-26-0525.json  target-SQLite3__SQLite3-Debug-b842b63e2a3a0d88831a.json  target-SQLite__SQLite3-Debug-9f23b24f65c1ce902f06.json  target-warehouse_app-Debug-72bee017a442157c058f.json  target-wxWidgets__wxWidgets-Debug-3100d18eb44c7fe0f39c.json
include/warehouse/: add_item_dialog.h  db.h  models.h  storage.h  ui_add_item_dialog.h
src/: main.cpp  ui_main_frame.cpp  ui_main_frame.h
src/warehouse/: db.cpp  storage.cpp  ui_add_item_dialog.cpp
